
= 1.4.18 =
Many method names have been changed. Any custom filters may need to be updated.

= 1.4.10 =
All script, style and body tags are stripped from html emails.

= 1.4.6 =
Attachments are now processed in the order they were attached.

== CHANGELOG ==
= 1.5.14 (2013.06.21) =
* Added PHP version to debug output
* Added PHP version check when disabling GSSAPI

= 1.5.13 (2013.06.18) =
* Added more robust charset conversion to deal with malformed emails.
* Ensure the default title is used when category etc parsing results in blank title
* Consolidate procedure for locating wp-config.php
* Additional debug output.
* Fixed a bug where the default author was being used even though the email had a valid author.
* Added feature to disable IMAP authentication with GSSAPI or NTLM to improve MS Exchange compatibility.

= 1.5.12 (2013.06.08) =
* Added full paths to includes in config_form due to some hosts having include_path set in a way that breaks Postie.
* Added some checks for emails that aren't correctly formatted (AirMail/WinLink)
* Consolidated environmental checks
* Added logic for Debian location of wp-config.php

= 1.5.11 (2013.06.02) =
* Moved test files out of main repository to decrease plugin size
* Fixed issue with readme file (Wordpress readme validator moved)

= 1.5.10 (2013.05.31) =
* Added template field descriptions to image tab.
* Fixed a bug where caption placeholder in templates wasn't being properly set.
* Additional test to see if wp-config.php can be found.

= 1.5.9 (2013.05.18) =
* Fixed a bug where valid users can post via email even though they don't have role permissions.
* Fixed a bug where nice_name was being used in the settings screen even though user_login was needed.
* Fixed the error message when the default poster is not valid.
* Fixed bug where gallery short tag was getting set when non-image attachments were found.

= 1.5.8 (2013.05.14) =
* Added additional default signature patterns.