@@ -4,7 +4,7 @@
   Plugin Name: Postie
   Plugin URI: http://PostiePlugin.com/
   Description: Signifigantly upgrades the posting by mail features of Word Press (See <a href='options-general.php?page=postie/postie.php'>Settings and options</a>) to configure your e-mail settings. See the <a href='http://wordpress.org/extend/plugins/postie/other_notes'>Readme</a> for usage. Visit the <a href='http://wordpress.org/support/plugin/postie'>postie forum</a> for support.
-  Version: 1.5.13
+  Version: 1.5.14
   Author: Wayne Allen
   Author URI: http://allens-home.com/
   License: GPL2
@@ -30,7 +30,7 @@
   $Id$
  */
 
-define('POSTIE_VERSION', '1.5.13');
+define('POSTIE_VERSION', '1.5.14');
 define("POSTIE_ROOT", dirname(__FILE__));
 define("POSTIE_URL", WP_PLUGIN_URL . '/' . basename(dirname(__FILE__)));
 
